[gd_scene load_steps=24 format=2]

[ext_resource path="res://Player/Player.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/PlayerSM.gd" type="Script" id=3]
[ext_resource path="res://Player/Powers/DoubleJump/DoubleJump.gd" type="Script" id=4]
[ext_resource path="res://Player/Player-texture.png" type="Texture" id=5]
[ext_resource path="res://shader.shader" type="Shader" id=6]
[ext_resource path="res://Effects/Particles/RunParticle.tscn" type="PackedScene" id=7]
[ext_resource path="res://Effects/Particles/FallParticle.tscn" type="PackedScene" id=8]
[ext_resource path="res://Effects/Particles/WallSlidingParticle.tscn" type="PackedScene" id=9]
[ext_resource path="res://Player/Camera/Camera2D.tscn" type="PackedScene" id=10]
[ext_resource path="res://Player/Powers/Dash/Dash.gd" type="Script" id=11]
[ext_resource path="res://Player/Powers/SlowMo/SlowMotion.gd" type="Script" id=12]
[ext_resource path="res://Sounds/jump.wav" type="AudioStream" id=13]
[ext_resource path="res://Sounds/Run.wav" type="AudioStream" id=14]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 6 )
shader_param/glow_color = Color( 0.898039, 1, 0, 1 )
shader_param/emission_texture = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.61029, 4.12868 )

[sub_resource type="Animation" id=3]
resource_name = "Dash"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Fall"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.3, 1.3 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.1, 0.9 ), Vector2( 0.9, 1.1 ), Vector2( 1.1, 0.9 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2512, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.85 ), Vector2( 0, -0.75 ), Vector2( 0, 0.85 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.00147765 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=6]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00147765 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.00147765, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 1.3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("Jump")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 13 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=7]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 5.0, 0.0, -5.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("Run")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 14 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=8]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 6.07011, 4.0657 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
rotation = 0.0872665
texture = ExtResource( 1 )
hframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -7.62939e-06, 3.93726 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Dash = SubResource( 3 )
anims/Fall = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/Jump = SubResource( 6 )
anims/Run = SubResource( 7 )
anims/WallSlide = SubResource( 8 )

[node name="Camera2D" parent="." instance=ExtResource( 10 )]

[node name="PlayerSM" type="Node" parent="."]
script = ExtResource( 3 )

[node name="SlowMotion" type="Node2D" parent="."]
script = ExtResource( 12 )

[node name="Cooldown" type="Timer" parent="SlowMotion"]

[node name="Dash" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="DashTimer" type="Timer" parent="Dash"]
wait_time = 0.1
one_shot = true

[node name="DashCooldown" type="Timer" parent="Dash"]
wait_time = 0.5
one_shot = true

[node name="GhostTimer" type="Timer" parent="Dash"]
wait_time = 0.01

[node name="DoubleJump" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="WallCast" type="Node2D" parent="."]
visible = false

[node name="Right" type="Node2D" parent="WallCast"]

[node name="RayCast" type="RayCast2D" parent="WallCast/Right"]
position = Vector2( 4.33954, 0.450245 )
enabled = true
cast_to = Vector2( 2, 0 )

[node name="RayCast2" type="RayCast2D" parent="WallCast/Right"]
position = Vector2( 4.44018, 6.20674 )
enabled = true
cast_to = Vector2( 2, 0 )

[node name="Left" type="Node2D" parent="WallCast"]

[node name="RayCast" type="RayCast2D" parent="WallCast/Left"]
position = Vector2( -4.42166, 0.166855 )
enabled = true
cast_to = Vector2( -2, 0 )

[node name="RayCast2" type="RayCast2D" parent="WallCast/Left"]
position = Vector2( -4.45608, 6.02399 )
enabled = true
cast_to = Vector2( -2, 0 )

[node name="RunParticlePivot" type="Position2D" parent="."]
position = Vector2( 0, 7.95325 )

[node name="RunParticle" parent="RunParticlePivot" instance=ExtResource( 7 )]
position = Vector2( -4.64596, -3.8147e-06 )

[node name="WallSlidingPivot" type="Position2D" parent="."]
position = Vector2( -0.00936508, -5.98464 )

[node name="WallSlidingParticle" parent="WallSlidingPivot" instance=ExtResource( 9 )]
position = Vector2( -4.26118, -0.477147 )

[node name="FallParticle" parent="." instance=ExtResource( 8 )]
position = Vector2( 0, 7.91287 )

[node name="PickupArea" type="Area2D" parent="."]
position = Vector2( 0, 2.68036 )
collision_layer = 0
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource( 9 )

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -3.0

[node name="Run" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -15.0
pitch_scale = 1.5
[connection signal="timeout" from="SlowMotion/Cooldown" to="SlowMotion" method="_on_Cooldown_timeout"]
[connection signal="timeout" from="Dash/DashTimer" to="Dash" method="_on_DashTimer_timeout"]
[connection signal="timeout" from="Dash/DashCooldown" to="Dash" method="_on_DashCooldown_timeout"]
[connection signal="timeout" from="Dash/GhostTimer" to="Dash" method="_on_GhostTimer_timeout"]
